# data-platform-automation-toolkit-Public

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: env-dev.yml  env-docker.yml  env-prod.yml  env-staging.yml
database/migrations/: V001__create_migration_tracking.sql  V002__create_inventory_schema.sql  V003__create_backup_history.sql  V004__create_alert_rules.sql  V005__add_stored_procedures.sql  V005__rollback__add_stored_procedures.sql
database/seed-data/: R001__seed_environments.sql  R002__seed_alert_rules.sql
database/tests/: test_data_integrity.sql  test_schema_validation.sql
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
infra/: .gitignore  main.tf  terraform.tfvars
pipelines/: azure-pipelines.yml
src/dbops/: __init__.py  cli.py  config.py  db.py  logging.py
src/dbops/commands/: __init__.py  backup.py  dashboard.py  drift_check.py  failover_test.py  healthcheck.py  migrate.py  restore.py  rollback.py
tests/: test_config.py  test_db.py  test_drift_check.py  test_healthcheck.py  test_migrate.py  test_rollback.py
